# ros2_arm_manipulator

./: README.md
install/: local_setup.sh  setup.sh
install/arm_controller/share/arm_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_controller/share/arm_controller/cmake/: arm_controllerConfig-version.cmake  arm_controllerConfig.cmake
install/arm_controller/share/arm_controller/environment/: ament_prefix_path.dsv  path.dsv
install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_description/share/arm_description/cmake/: arm_descriptionConfig-version.cmake  arm_descriptionConfig.cmake
install/arm_description/share/arm_description/environment/: ament_prefix_path.dsv  path.dsv
install/arm_description/share/arm_description/launch/: display.launch.py
install/arm_description/share/arm_description/urdf/: arm.urdf  arm.urdf.xacro  arm_hardware_interface.xacro
install/arm_gazebo/share/arm_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_gazebo/share/arm_gazebo/cmake/: arm_gazeboConfig-version.cmake  (+1 more)
log/: latest_build
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/src/: arm_controller_node.cpp
src/arm_gazebo/: CMakeLists.txt  package.xml
src/arm_gazebo/config/: arm_controllers.yaml  controller.yaml
src/arm_gazebo/launch/: arm_world.launch.py
(+9 files in other folders)
