<?xml version="1.0"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for the 4-DOF arm</description>
  <maintainer email="ao.iholyhock8@gmail.com">Shreya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>